RESOLVED FIXED160978
[iOS] Network Processes & Database processes do not exit promptly
https://bugs.webkit.org/show_bug.cgi?id=160978
Summary [iOS] Network Processes & Database processes do not exit promptly
Chris Dumez
Reported 2016-08-18 15:28:29 PDT
Network Processes & Database processes do not exit promptly. They hang for 10 seconds until they log the following message: com.apple.WebKit.Networking: (WebKit) #WK: Exiting process early due to unacknowledged closed-connection Then forcefully call exit(0).
Attachments
Patch (3.12 KB, patch)
2016-08-18 15:33 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2016-08-18 15:28:51 PDT
Chris Dumez
Comment 2 2016-08-18 15:33:13 PDT
WebKit Commit Bot
Comment 3 2016-08-18 18:09:23 PDT
Comment on attachment 286404 [details] Patch Clearing flags on attachment: 286404 Committed r204621: <http://trac.webkit.org/changeset/204621>
WebKit Commit Bot
Comment 4 2016-08-18 18:09:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.